# smartx-k8s

./: .gitattributes  .gitignore  .helmignore  Cargo.toml  Chart.yaml  Justfile  README.md  _typos.toml  manifest.yaml  rust-toolchain.toml  values.yaml
contrib/dark-lake-api/: Cargo.toml
contrib/dark-lake-api/src/: format.rs  kernel.rs  parser.rs  script.rs  store.rs  table.rs
crates/connected-data-lake-api/: Cargo.toml
crates/connected-data-lake-api/src/: block.rs  error.rs  fs.rs  fuse.rs  lib.rs
crates/connected-data-lake-backend-fs/: Cargo.toml
crates/connected-data-lake-driver/: Cargo.toml
crates/connected-data-lake-driver/src/: main.rs
crates/connected-data-lake-layer-datafusion/: Cargo.toml
crates/connected-data-lake-layer-datafusion/src/: schema.rs
crates/connected-data-lake-layer-staging/: Cargo.toml
crates/connected-data-lake-layer-staging/src/: block.rs  fs.rs
crates/dark-lake/: Cargo.toml
crates/dark-lake/src/: main.rs
crates/data-pond/: Cargo.toml
crates/data-pond-api/: Cargo.toml  build.rs
crates/data-pond-api/proto/: pond.proto
crates/data-pond-api/src/: lib.rs
crates/data-pond/src/: controller.rs  discovery.rs  identity.rs  main.rs  node.rs  pond.rs  volume.rs
crates/data-pond/src/discovery/: mod.rs  nvme.rs
crates/openark-admission-controller/: Cargo.toml
crates/openark-admission-controller/src/: main.rs
crates/openark-core/: Cargo.toml
crates/openark-core-opentelemetry/: Cargo.toml
crates/openark-core-opentelemetry/src/: lib.rs
crates/openark-core/src/: client.rs  lib.rs  operator.rs  tls.rs
crates/openark-gateway-filter-ollama/: Cargo.toml
crates/openark-gateway-filter-ollama/src/: lib.rs
crates/openark-histogram-api/: Cargo.toml
crates/openark-histogram-api/src/: histogram.rs  histogram_class.rs  lib.rs
crates/openark-kiss-ansible/: Cargo.toml
crates/openark-kiss-ansible/src/: cluster.rs  config.rs  lib.rs
crates/openark-kiss-api/: Cargo.toml
crates/openark-kiss-api/src/: box.rs
crates/openark-kiss-backend/: Cargo.toml
crates/openark-kiss-backend/src/: main.rs
crates/openark-kiss-backend/src/routes/: commission.rs  mod.rs  new.rs
crates/openark-spectrum-operator/: Cargo.toml
crates/openark-spectrum-operator/src/: main.rs  metrics_class.rs  spectrum_class.rs  status.rs
crates/openark-spectrum-operator/src/histogram/: mod.rs  service.rs
crates/openark-spectrum-operator/src/pool/: mod.rs  service.rs
crates/openark-spectrum-operator/src/pool_claim/: mod.rs  service.rs
crates/openark-spectrum-operator/src/targets/: mod.rs  service.rs
crates/openark-spectrum-operator/src/utils/: histogram.rs  mod.rs  pool.rs
crates/openark-spectrum-pool/: Cargo.toml
crates/openark-spectrum-pool/src/: main.rs  pool.rs  store.rs
crates/openark-spectrum-pool/src/routes/: mod.rs  service.rs
crates/openark-spectrum-scheduler/: Cargo.toml
crates/openark-spectrum-scheduler/src/: item.rs  lib.rs  state.rs
crates/openark-spectrum-scheduler/src/solvers/: milp.rs  mod.rs
crates/openark-vine-browser-backend/: Cargo.toml  README.md
crates/openark-vine-browser-backend/src/: main.rs
crates/openark-vine-browser-backend/src/routes/: data.rs  global.rs  metadata.rs  mod.rs
crates/openark-vine-browser-frontend/: Cargo.toml  README.md  Trunk.toml  index.html  package.json  tailwind.config.ts
crates/openark-vine-browser-frontend/api/v1/: get.json
crates/openark-vine-browser-frontend/api/v1/metadata/: get.json
crates/openark-vine-browser-frontend/api/v1/metadata/My Audio.mp3/: get.json
crates/openark-vine-browser-frontend/api/v1/metadata/My Document.pdf/: get.json
crates/openark-vine-browser-frontend/src/: app.rs  main.rs  router.rs
crates/openark-vine-browser-frontend/src/i18n/: en_us.rs  ko_kr.rs  mod.rs
crates/openark-vine-browser-frontend/src/net/: client.rs  file.rs  mod.rs  poll.rs
crates/openark-vine-browser-frontend/src/pages/: mod.rs
crates/openark-vine-browser-frontend/src/pages/directory/: grid.rs  io.rs  list.rs  mime.rs  mod.rs  navbar.rs  preview.rs  right_sidebar.rs  sidebar.rs  upload.rs  utils.rs
crates/openark-vine-browser-frontend/src/widgets/: error.rs  mod.rs  upload.rs  warn.rs
crates/openark-vine-browser-frontend/styles/: main.css
crates/openark-vine-dashboard-api/: Cargo.toml
crates/openark-vine-dashboard-api/src/: app.rs  catalog.rs  client.rs  item.rs  lib.rs  page.rs  table.rs
crates/openark-vine-dashboard-api/tests/: jiff.rs
crates/openark-vine-dashboard-backend/: Cargo.toml
crates/openark-vine-dashboard-backend/src/: main.rs
crates/openark-vine-dashboard-backend/src/routes/: app.rs  mod.rs  tables.rs  users.rs
crates/openark-vine-dashboard-frontend/: Cargo.toml  Trunk.toml  index.html  package.json  tailwind.config.ts
crates/openark-vine-dashboard-frontend/api/v1/: get.json
crates/openark-vine-dashboard-frontend/api/v1/bindings/: get.json
crates/openark-vine-dashboard-frontend/src/: app.rs  main.rs  router.rs
crates/openark-vine-dashboard-frontend/src/layouts/: footer.rs  mod.rs  scaffold.rs
crates/openark-vine-dashboard-frontend/src/models/: json_value.rs
crates/openark-vine-dashboard-frontend/src/pages/: dyn_page.rs  home.rs  item_form.rs  login.rs  mod.rs
crates/openark-vine-dashboard-frontend/src/stores/: app.rs  client.rs
crates/openark-vine-dashboard-frontend/src/widgets/: dialog.rs  mod.rs  table.rs
crates/openark-vine-dashboard-frontend/src/widgets/buttons/: mod.rs  switch_theme.rs
crates/openark-vine-dashboard-jq/: Cargo.toml  README.md
crates/openark-vine-dashboard-jq/src/: error.rs  lib.rs
crates/openark-vine-dashboard-jq/tests/: simple.rs
crates/openark-vine-oauth/: Cargo.toml
crates/openark-vine-oauth/src/: client.rs  error.rs  jwt.rs  kube.rs  lib.rs  parser.rs  webhook.rs
crates/openark-vine-session-api/: Cargo.toml
crates/openark-vine-session-api/src/: binding.rs  client.rs  command.rs  exec.rs  lib.rs  owned_profile.rs  profile.rs  session.rs
crates/openark-vine-session-backend/: Cargo.toml
crates/openark-vine-session-backend/src/: bindings.rs  commands.rs  error.rs  main.rs  utils.rs
(+839 files in other folders)
