[workspace]
default-members = ["crates/openark-cli"]
members = ["contrib/*", "crates/*"]
resolver = "2"

[profile.dev]
opt-level = 1 # serde + tracing may causes stack overflow

[profile.release]
# codegen-units = 1
# lto = true
# opt-level = 3

[profile.release-wasm]
codegen-units = 1
inherits = "release"
lto = true
opt-level = 3
panic = "abort"
strip = "debuginfo"

[workspace.package]
authors = ["Ho Kim <ho.kim@ulagbulag.io>"]
description = "Deploy & Integrate & Manage your own Converged K8S Edge Clusters"
documentation = "https://github.com/SmartX-Team/smartx-k8s"
edition = "2024"
include = ["src/**/*.rs", "Cargo.toml"]
keywords = ["iac", "kubernetes", "openark"]
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
readme = "./README.md"
rust-version = "1.90"
homepage = "https://github.com/SmartX-Team/smartx-k8s"
repository = "https://github.com/SmartX-Team/smartx-k8s"

version = "0.0.0" # A placeholder

[workspace.lints.clippy]
blocks_in_conditions = "allow" # opentelemetry tracing macro would be noisy

[workspace.dependencies]
dark-lake-api = { path = "contrib/dark-lake-api" }
dark-lake-rt-io-uring = { path = "contrib/dark-lake-rt-io-uring" }
data-pond-api = { path = "contrib/data-pond-api" }
data-pond-csi = { path = "contrib/data-pond-csi" }
openark-admission-controller-base = { path = "crates/openark-admission-controller-base" }
openark-admission-openapi = { path = "crates/openark-admission-openapi" }
openark-core = { path = "crates/openark-core" }
openark-core-opentelemetry = { path = "crates/openark-core-opentelemetry" }
openark-kiss-ansible = { path = "crates/openark-kiss-ansible" }
openark-kiss-api = { path = "crates/openark-kiss-api" }
openark-spectrum-api = { path = "crates/openark-spectrum-api" }
openark-spectrum-scheduler = { path = "crates/openark-spectrum-scheduler" }
openark-vine-browser-api = { path = "crates/openark-vine-browser-api" }
openark-vine-dashboard-api = { path = "crates/openark-vine-dashboard-api" }
openark-vine-dashboard-jq = { path = "crates/openark-vine-dashboard-jq" }
openark-vine-oauth = { path = "crates/openark-vine-oauth" }
openark-vine-session-api = { path = "crates/openark-vine-session-api" }
openark-vine-session-exec = { path = "crates/openark-vine-session-exec" }

actix-cors = { version = "=0.7", default-features = false }
actix-web = { version = "=4.12", default-features = false, features = [
    "compat",
    "compress-brotli",
    "compress-gzip",
    "compress-zstd",
    "http2",
    "macros",
    "unicode",
] }
actix-web-opentelemetry = { version = "=0.22", default-features = false }
anyhow = { version = "=1.0", default-features = false }
async-trait = { version = "=0.1", default-features = false }
base64 = { version = "=0.22", default-features = false }
bitflags = { version = "=2.10", default-features = false }
bytes = { version = "*", default-features = false }
chrono = { version = "=0.4", default-features = false }
clap = { version = "=4.5", default-features = false }
cookie = { version = "=0.18", default-features = false }
codesnake = { version = "=0.2", default-features = false }
convert-case = { package = "convert_case", version = "=0.10", default-features = false }
futures = { version = "=0.3", default-features = false }
getrandom = { version = "=0.3", default-features = false }
good-lp = { package = "good_lp", version = "=1.14", features = [
    "coin_cbc",
    "lp-solvers",
    "singlethread-cbc",
] }
gloo-net = { version = "=0.6", default-features = false }
hickory-resolver = { version = "=0.25", default-features = false, features = [
    "backtrace",
] }
hickory-server = { version = "=0.25", default-features = false, features = [
    "backtrace",
] }
hifijson = { version = "=0.2", default-features = false } # should be synced with jaq-json
http = { version = "=1.4", default-features = false }
io-uring = { version = "=0.7", default-features = false }
ipnet = { version = "=2.11", default-features = false }
itertools = { version = "=0.14", default-features = false }
jaq-core = { version = "=2.2", default-features = false }
jaq-json = { version = "=1.1", default-features = false }
jaq-std = { version = "=2.1", default-features = false }
json-patch = { version = "=4.1", default-features = false } # should be synced with kube
jsonwebtoken = { version = "=9.3", default-features = false, features = [
    "use_pem",
] }
k8s-openapi = { version = "=0.26", default-features = false, features = [
    "v1_32",
] }
kcr-argoproj-io = { package = "kcr_argoproj_io", version = "=2", default-features = false, features = [
    "v1alpha1",
    "v1beta1",
] }
kube = { version = "=2.0", default-features = false } # should be synced with k8s-openapi
kube-quantity = { package = "kube_quantity", version = "=0.9", default-features = false } # should be synced with kube
libc = { version = "=0.2", default-features = false }
opentelemetry = { version = "=0.31", default-features = false }
opentelemetry-appender-tracing = { version = "=0.31", default-features = false }
opentelemetry-otlp = { version = "=0.31", default-features = false }
opentelemetry-sdk = { package = "opentelemetry_sdk", version = "=0.31", default-features = false }
ordered-float = { version = "=5.1", default-features = false }
pastey = { version = "=0.2", default-features = false }
percent-encoding = { version = "=2.3", default-features = false }
prometheus-http-query = { version = "=0.8", default-features = false }
prost = { version = "=0.14", default-features = false }
prost-types = { version = "=0.14", default-features = false }
proxy-wasm = { version = "=0.2.4", default-features = false }
redb = { version = "=3.1", default-features = false }
regex = { version = "=1.12", default-features = false }
reqwest = { version = "=0.12", default-features = false, features = [
    "charset",
    "http2",
    "macos-system-configuration",
] }
rustls = { version = "=0.23", default-features = false }
rustls-pemfile = { version = "=2.2", default-features = false }
schemars = { version = "=1.2", default-features = false, features = [
    "preserve_order",
] }
serde = { version = "=1.0", default-features = false }
serde-json = { package = "serde_json", version = "=1.0", default-features = false }
serde-urlencoded = { package = "serde_urlencoded", version = "=0.7", default-features = false }
strum = { version = "=0.27", default-features = false }
thiserror = { version = "=2.0", default-features = false }
timeago = { version = "=0.6", default-features = false, features = [
    "translations",
] }
tonic = { version = "=0.14", default-features = false }
tonic-prost = { version = "=0.14", default-features = false } # should be synced with tonic and prost
tonic-prost-build = { version = "=0.14", default-features = false } # should be synced with tonic and prost
tracing = { version = "=0.1", default-features = false }
tracing-opentelemetry = { version = "=0.32", default-features = false } # should be synced with opentelemetry
tracing-subscriber = { version = "=0.3", default-features = false }
tracing-web = { version = "=0.1", default-features = false }
tokio = { version = "=1", default-features = false }
tokio-stream = { version = "=0.1", default-features = false }
tokio-util = { version = "=0.7", default-features = false }
unicode-width = { version = "=0.2", default-features = false, features = [
    "cjk",
] }
url = { version = "=2.5", default-features = false }
uuid = { version = "=1.19", default-features = false }
web-sys = { version = "=0.3", default-features = false }
yew = { version = "=0.21", default-features = false }
yew-router = { version = "=0.18", default-features = false } # should be synced with yew
yewdux = { version = "=0.11", default-features = false, features = [
    "future",
] } # should be synced with yew

[patch.crates-io]
# FIXME: Wait for a PR to be merged
good_lp = { git = "https://github.com/ulagbulag/good_lp.git", branch = "feat/impl-clone-for-constraint-and-problem-variables" }
# io-uring = { path = "../io-uring" }
# FIXME: Wait for a next version to be released
timeago = { git = "https://github.com/vi/timeago.git", branch = "master" }
