[package]
name = "dark-lake-api"

authors = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
std = [
    "anyhow/std",
    "chrono/std",
    "itertools/use_std",
    "serde/std",
    "serde-json/std",
    "tracing?/std",
]

# TLS
tls-aws-lc-rs = []
tls-openssl = []
tls-ring = []

# Tracing
tracing = ["dep:tracing"]

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true, features = ["alloc"] }
itertools = { workspace = true }
pastey = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde-json = { workspace = true }
strum = { workspace = true, features = ["derive"] }
tracing = { workspace = true, optional = true }
