[package]
name = "connected-data-lake-driver"

authors = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["opentelemetry-all"]

# OpenTelemetry
opentelemetry = ["openark-core/opentelemetry", "tracing"]
opentelemetry-all = [
    "openark-core/opentelemetry-all",
    "opentelemetry-logs",
    "opentelemetry-metrics",
    "opentelemetry-trace",
]
opentelemetry-otlp = ["openark-core/opentelemetry-otlp", "opentelemetry"]

# OpenTelemetry pillars and functions
opentelemetry-logs = ["openark-core/opentelemetry-logs", "opentelemetry"]
opentelemetry-metrics = ["openark-core/opentelemetry-metrics", "opentelemetry"]
opentelemetry-trace = ["openark-core/opentelemetry-trace", "opentelemetry"]

# Tracing
tracing = ["connected-data-lake-api/tracing", "dep:tracing"]

[dependencies]
connected-data-lake-api = { workspace = true, features = ["fuse", "std"] }
connected-data-lake-backend-fs = { workspace = true, features = ["std"] }
connected-data-lake-backend-object-store = { workspace = true, features = [
    "std",
] }
connected-data-lake-layer-delta-lake = { workspace = true, features = [
    "full",
    "fuse",
    "std",
] }
openark-core = { workspace = true, features = ["clap", "std"] }

clap = { workspace = true, features = ["derive", "std"] }
fuser = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true, optional = true, features = ["std"] }
