[package]
name = "connected-data-lake-layer-staging"

authors = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
alloc = ["connected-data-lake-api/alloc", "serde?/alloc"]
std = ["connected-data-lake-api/std", "serde?/std"]

fuse = ["connected-data-lake-api/fuse", "dep:fuser"]
schemars = ["dep:schemars", "connected-data-lake-api/schemars", "serde"]
serde = ["alloc", "connected-data-lake-api/serde", "dep:serde"]

[dependencies]
connected-data-lake-api = { workspace = true, features = ["datafusion", "std"] }

fuser = { workspace = true, optional = true }
schemars = { workspace = true, optional = true, features = ["derive"] }
serde = { workspace = true, optional = true, features = ["derive"] }
