[package]
name = "dark-lake"

authors = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
    "tls-default",
    "opentelemetry-all",
    # "opentelemetry-otlp",
]

# OpenTelemetry
opentelemetry = ["openark-core/opentelemetry", "tracing"]
opentelemetry-all = [
    "openark-core/opentelemetry-all",
    "opentelemetry-logs",
    "opentelemetry-metrics",
    "opentelemetry-trace",
]
opentelemetry-otlp = ["openark-core/opentelemetry-otlp", "opentelemetry"]

# OpenTelemetry pillars and functions
opentelemetry-logs = ["openark-core/opentelemetry-logs", "opentelemetry"]
opentelemetry-metrics = ["openark-core/opentelemetry-metrics", "opentelemetry"]
opentelemetry-trace = ["openark-core/opentelemetry-trace", "opentelemetry"]

# TLS
tls-default = ["tls-aws-lc-rs"]
tls-aws-lc-rs = ["dark-lake-api/tls-aws-lc-rs", "openark-core/tls-aws-lc-rs"]
tls-openssl = ["dark-lake-api/tls-openssl", "openark-core/tls-openssl"]
tls-ring = ["dark-lake-api/tls-ring", "openark-core/tls-ring"]

# Tracing
tracing = [
    "dark-lake-api/tracing",
    "dark-lake-rt-io-uring/tracing",
    "dep:tracing",
    "openark-core/tracing",
]

[dependencies]
dark-lake-api = { workspace = true, features = ["std"] }
dark-lake-rt-io-uring = { workspace = true }
openark-core = { workspace = true, features = ["clap", "std"] }

anyhow = { workspace = true, features = ["std"] }
clap = { workspace = true, features = ["derive", "std"] }
serde-json = { workspace = true, features = ["std"] }
tracing = { workspace = true, optional = true, features = [
    "attributes",
    "std",
] }
