[package]
name = "data-pond-api"

authors = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

schemars = ["dep:schemars", "serde"]
serde = ["dep:serde"]

[dependencies]
data-pond-csi = { workspace = true }

schemars = { workspace = true, optional = true, features = ["derive"] }
serde = { workspace = true, optional = true, features = ["derive", "std"] }
