[package]
name = "data-pond"

authors = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
    "tls-default",
    "opentelemetry-all",
    # "opentelemetry-otlp",
]

# OpenTelemetry
opentelemetry = ["openark-core/opentelemetry", "tracing"]
opentelemetry-all = [
    "openark-core/opentelemetry-all",
    "opentelemetry-logs",
    "opentelemetry-metrics",
    "opentelemetry-trace",
]
opentelemetry-otlp = ["openark-core/opentelemetry-otlp", "opentelemetry"]

# OpenTelemetry pillars and functions
opentelemetry-logs = ["openark-core/opentelemetry-logs", "opentelemetry"]
opentelemetry-metrics = ["openark-core/opentelemetry-metrics", "opentelemetry"]
opentelemetry-trace = ["openark-core/opentelemetry-trace", "opentelemetry"]

# TLS
tls-default = ["tls-aws-lc-rs"]
tls-aws-lc-rs = [
    "hickory-resolver/dnssec-aws-lc-rs",
    "hickory-resolver/tls-aws-lc-rs",
    "hickory-resolver/h3-aws-lc-rs",
    "hickory-resolver/https-aws-lc-rs",
    "hickory-resolver/quic-aws-lc-rs",
    "data-pond-csi/tls-aws-lc-rs",
    "openark-core/tls-aws-lc-rs",
]
tls-openssl = ["data-pond-csi/tls-openssl", "openark-core/tls-openssl"]
tls-ring = [
    "hickory-resolver/dnssec-ring",
    "hickory-resolver/tls-ring",
    "hickory-resolver/h3-ring",
    "hickory-resolver/https-ring",
    "hickory-resolver/quic-ring",
    "data-pond-csi/tls-ring",
    "openark-core/tls-ring",
]

# Tracing
tracing = ["dep:tracing", "openark-core/tracing"]

[dependencies]
data-pond-api = { workspace = true, features = ["serde"] }
data-pond-csi = { workspace = true, features = [
    "client",
    "server",
    "transport",
] }
openark-core = { workspace = true, features = ["clap", "std"] }

anyhow = { workspace = true, features = ["std"] }
async-trait = { workspace = true }
chrono = { workspace = true, features = ["std"] }
clap = { workspace = true, features = ["derive", "std"] }
futures = { workspace = true, features = ["std"] }
hickory-resolver = { workspace = true, features = ["system-config", "tokio"] }
serde = { workspace = true, features = ["std"] }
serde-json = { workspace = true, features = ["std"] }
strum = { workspace = true, features = ["derive"] }
tonic = { workspace = true, features = ["router", "server", "transport"] }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true, features = ["full"] }
tracing = { workspace = true, optional = true, features = [
    "attributes",
    "std",
] }
url = { workspace = true, features = ["std"] }
